--- a/keylogger.ini
+++ b/keylogger.ini
@@ -1,9 +1,9 @@
 [default]
-defaultComputerName = DEFAULT
+defaultComputerName =
 
 [databse]
 host = localhost
 port = 3306
 user = root
-pass = PASSwoORd
+pass = PAssWWdd
 db = data_log
